
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)
------------------------------------------------------------------
HEAD    (2004-03-30)
	Javascript protection enabled on all tables.
	See gedafe-javascript.pod for details.
	------------
	Here are some more descriptions for people browsing
	through this file with a text search utility:
	script broken
	script error
	script missing
	script removed
------------------------------------------------------------------
HEAD    (2004-03-22)
	You can now supply a hand-crafted edit mask template

	This makes it possible to make edit masks more user friendly, 
	to use Java Script for input control, etc.
	A very ugly example "customer" template is supplied for the 
	"customer" table.
		Johannes
------------------------------------------------------------------
HEAD    (2004-03-19)
	You can move the Edit/Clone/Delete buttons in the list
	view to the left. Supply the new parameter edit_buttons_left
	and set it to 1 in the Start() function
		Johannes
------------------------------------------------------------------
HEAD    (2004-03-12)
	Long comments 
	Long comments can be saved per table in meta_tables. This
	is displayed in the entry screen but also in tooltips
	and table headers.
	Added id colums to meta_fields and meta_tables. This makes
	it possible to edit them in phpPgmyadmin, and to add more
	then one attribute to a table(+field). 
	To make it bullet proof, one should add a 
	UNIQUE (meta_tables_table,meta_tables_attribute) constraint 
	to meta_tables and a similar constraint on meta_fields:
        UNIQUE (meta_fields_table,meta_fields_field,meta_fields_attribute)

	Tested including the changed demo1.sql script
			Johannes
------------------------------------------------------------------
HEAD    (2004-03-10)
	Checked in agreed upon fix to schema code with 
	robust defaults for schema and schema search path